<resources>
    <string name="app_name">Intelligent Fitness System</string>
    <string name="action_bar_color">#FFEB3B</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="registerLink"><u>新用户注册</u></string>
    <string name="baseUrl">http://172.16.198.246:8080/</string>
    <string name="baseUrl_local">http://172.16.73.48:8080</string>
    <string name="baseUrl_remote">http://407302b9g6.eicp.vip/</string>
    <string name="api_login">users/login</string>
    <string name="api_register">users</string>
    <string name="api_release_article">articles</string>
    <string name="api_release_comment">articles/comments</string>
    <string name="api_get_img">images/</string>
    <string name="api_get_articleImg">articleImg/</string>
    <string name="status_server_error">{"status":-1}</string>
    <string name="focus">关注</string>
    <string name="focused">已关注</string>
    <string name="chosen">热门</string>
    <string name="latest">最新</string>
    <string name="article">动态</string>
    <string name="nickname">用户名</string>
    <string name="comment_area">评论区</string>
    <string name="register">注册</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="phone_register">手机号注册</string>
    <string name="bar_article">动态详情</string>
    <string name="bar_search">查找用户</string>
    <string name="bar_release_article">发布动态</string>
    <string name="bar_modify">修改个人信息</string>
    <string name="bar_user">用户信息</string>
    <string name="gender">性别</string>
    <string name="birth">出生日期</string>
    <string name="release">发布</string>
    <string name="save">保存</string>
    <string name="followers">粉丝</string>
    <string name="text_normal">16sp</string>
    <string name="text_selected">20sp</string>
    <string name="log_out">退出登录</string>
    <string name="click_to_login">点击此处登录</string>
    <string name="click_to_cancel">取消</string>
    <string name="click_to_search">搜索</string>
    <string name="hint_phone" translatable="false">请填写手机号</string>
    <string name="hint_comment">留下精彩的评论吧</string>
    <string name="hint_nickname">请输入用户名</string>
    <string name="hint_confirm_pwd">再次输入密码</string>
    <string name="hint_pwd" translatable="false">请输入密码</string>
    <string name="hint_pwd_diff">两次密码不一致</string>
    <string name="hint_birth">请选择日期</string>
    <string name="hint_practice">请选择动作类型</string>
    <string name="hint_input">请输入内容</string>
    <string name="head_img">头像</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="info_error_server">服务器错误</string>
    <string name="info_success_login">登陆成功</string>
    <string name="info_no_user">找不到用户</string>
    <string name="permission_request_denied">获取权限失败</string>
    <string name="nothing"> </string>

    <string name="msg_no_camera">没有系统相机</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="cancel">取消</string>

    <string name="mis_permission_dialog_title">权限拒绝</string>
    <string name="mis_permission_dialog_ok">好</string>
    <string name="mis_permission_dialog_cancel">拒绝</string>
    <string name="mis_permission_rationale_write_storage">需要您提供写/读存储权限</string>

    <string name="comment_count">条回复</string>
</resources>