<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:id="@+id/back_arrow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_margin="10dp"
            android:background="@drawable/back_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/phone_register"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_nickname"
                android:ems="10"
                android:id="@+id/name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_phone"
                android:maxLength="11"
                android:id="@+id/phone"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="phone"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_pwd"
                android:ems="10"
                android:id="@+id/pwd"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="textPassword"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pwd"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_confirm_pwd"
                android:ems="10"
                android:id="@+id/confirm_pwd"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_is_can"
            android:enabled="false"
            android:textColor="@color/white"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>