<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/bar"
        android:layout_height="50dp">
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/back_arrow"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/text_normal"
            android:text="@string/bar_modify"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/text_normal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_nickname"
                android:ems="10"
                android:id="@+id/name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_phone"
                android:maxLength="11"
                android:id="@+id/phone"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="phone"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_pwd"
                android:ems="10"
                android:id="@+id/pwd"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:autofillHints="" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pwd"
                android:ems="4"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <EditText
                android:hint="@string/hint_confirm_pwd"
                android:ems="10"
                android:id="@+id/confirm_pwd"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:autofillHints="" />
        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_marginTop="15dp"
            android:layout_width="250dp"
            android:enabled="false"
            android:layout_height="35dp"
            android:background="@drawable/btn_is_can"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/register"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/log_out"
        android:id="@+id/logOutBtn"/>
</LinearLayout>