<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/user_img"
            android:layout_weight="4"
            android:id="@+id/head"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/focus"
                android:textColor="@color/text_normal"
                android:text="@string/focus"
                tools:ignore="NestedWeights" />
            <TextView
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/text_selected"
                android:id="@+id/chosen"
                android:text="@string/chosen"/>
            <TextView
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/latest"
                android:text="@string/latest"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="20dp"
            android:src="@drawable/search"
            android:layout_weight="4"
            android:id="@+id/search"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"/>
</LinearLayout>