<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/head_area"
        android:layout_height="50dp">
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/back_arrow"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/text_normal"
            android:text="@string/bar_article"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="50dp"
        app:layout_constraintTop_toBottomOf="@+id/head_area"
        app:layout_constraintBottom_toTopOf="@+id/foot_area">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/head"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/user_img" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:textSize="17sp"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/text_selected"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/nickname"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="15dp"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/createTime"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/focus"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/oval"
                        android:text="@string/focus"
                        android:textColor="@color/text_normal" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/text_selected"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/content_images"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:src="@drawable/user_img" />

                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:src="@drawable/user_img" />

                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:src="@drawable/user_img" />
            </LinearLayout>

            <cn.ittiger.player.VideoPlayerView
                android:id="@+id/content_video"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingHorizontal="5dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/praise"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/praise" />

                <TextView
                    android:id="@+id/praise_num"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:gravity="start"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/comment"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/comment" />

                <TextView
                    android:id="@+id/comment_num"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:gravity="start"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/transport"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/transport" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/text_selected"
                android:layout_margin="10dp"
                android:text="评论(23)"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/recyclerView"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:id="@+id/foot_area"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/oval"
            android:hint="@string/hint_comment" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:layout_marginHorizontal="5dp"
            android:text="@string/release"
            android:textColor="@color/white"
            android:background="@drawable/btn_is_can"
            android:enabled="false"
            android:id="@+id/commentBtn"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>